[package]
edition = "2024"
name = "schemalane"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "schemalane"
path = "src/lib.rs"

[[bin]]
name = "schemalane"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
crc32fast = "1.4.2"
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "2.0.0-rc.34"
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
]

[dependencies.sea-orm-migration]
version = "2.0.0-rc.34"
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]

[dev-dependencies]
tempfile = "3.25.0"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "blocking"] }
