[package]
edition = "2024"
name = "schemalane-cli"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[[bin]]
name = "schemalane"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
schemalane = { path = "../schemalane" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "2.0.0-rc.34"
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
]
