[package]
edition = "2024"
name = "schemalane-cli"
publish = false
rust-version = "1.93.0"
version = "0.1.0"

[lints]
workspace = true

[[bin]]
name = "schemalane"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
schemalane-core = { path = "../schemalane-core" }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "2.0.0-rc.35"
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
]
